# cmake_cmoka_hello_word

./: README.md
cmake_cmocka_example_linux_mint/: README.md  install.sh
cmake_cmocka_example_linux_mint/Project/: CMakeLists.txt  run_app.sh  run_unit_tests.sh
cmake_cmocka_example_linux_mint/Project/cmake/: compiler_linker_options_app.cmake  compiler_linker_options_unit_tests.cmake  gcc.cmake  lcov.lcovrc  lcov_ignore_files_list.txt  sources_app.cmake  sources_unit_tests.cmake
cmake_cmocka_example_linux_mint/Project/src/: main.c
cmake_cmocka_example_linux_mint/Project/src/module/: CMakeLists.txt  module.c  module.h
cmake_cmocka_example_linux_mint/Project/unit_tests/: unit_tests.c
cmake_cmocka_example_linux_mint/Project/unit_tests/module/: CMakeLists.txt  unit_test_module.c  unit_test_module.h
